# ocaml-sdp

./: .gitignore  LICENSE  README.md  dune-project  sdp.opam
.github/workflows/: test.yml
lib/: dune  sdp.ml  types.ml
test/: dune  test.ml
